This document details the changes between this version, bash-4.4-alpha, and
the previous version, bash-4.3-release.

1.  Change to Bash

a.  Fixed two bugs that caused out-of-bounds reads when skipping over assignment
    statements while finding the word on which to perform programmable
    completion.

b.  Fixed a memory leak in programmable completion.

c.  Fixed a bug that could cause the shell to crash when interrupting the
    wait builtin.

d.  Fixed a bug that caused ${!vvv@} to be interpreted as introducing the new
    `@' operator.

e.  Fixed a bug that caused the && and || operators to be incorrectly optimized.

f.  The shell now undoes redirections before exiting the shell when the `-e'
    option is enabled, and a shell function fails.

g.  History expansion now skips over the history expansion character in command
    and process substitution.

h.  Fixed a bug that caused stray '\001' characters to be added to the output
    of `declare -p'.

i.  Fixed a memory leak when processing declare commands that perform compound
    array assignments.

j.  Fixed a bug that could cause the shell to crash when reading input from a
    file and the limit on open file descriptors is high.

k.  Fixed a bug that caused the ERR and RETURN traps to be unset if they were
    set in a shell function but unset previously.

l.  Fixed a bug that caused several signals to be ignored if `exec' failed in
    an interactive shell.

m.  A posix-mode non-interactive shell now considers a parameter expansion error
    to be a fatal error.

n.  The `time' command now prints timing statistics for failed commands when
    the -e option is enabled.

o.  Fixed a bug that caused the shell to crash when attempting to indirectly
    expand a shell variable with an invalid name.

p.  Fixed a bug that caused the shell to crash when running a trap containing
    a process substitution.

q.  Bash now prints the keyword `function' before a function with the same name