@@ -869,7 +869,10 @@ int	quoted;
 
 	for (ae = element_forw(a->head); ae != a->head; ae = element_forw(ae)) {
 		is = inttostr (element_index(ae), indstr, sizeof(indstr));
-		valstr = element_value (ae) ? sh_double_quote (element_value(ae))
+		valstr = element_value (ae) ?
+				(ansic_shouldquote (element_value (ae)) ?
+				   ansic_quote (element_value(ae), 0, (int *)0) :
+				   sh_double_quote (element_value (ae)))
 					    : (char *)NULL;
 		elen = STRLEN (is) + 8 + STRLEN (valstr);
 		RESIZE_MALLOCED_BUFFER (result, rlen, (elen + 1), rsize, rsize);
