@@ -3170,7 +3170,8 @@ The expansion is a string that is the result of expanding the value of
 \fIparameter\fP as if it were a prompt string (see \fBPROMPTING\fP below).
 .TP
 .B A
-The expansion is a string in the form of a \fBdeclare\fP command that, if
+The expansion is a string in the form of
+an assignment statement or \fBdeclare\fP command that, if
 evaluated, will recreate \fIparameter\fP with its attributes and value.
 .TP
 .B a
