@@ -2209,7 +2209,8 @@ escape sequences expanded as with the @code{$'@dots{}'} quoting mechansim.
 The expansion is a string that is the result of expanding the value of
 @var{parameter} as if it were a prompt string (@pxref{Controlling the Prompt}).
 @item A
-The expansion is a string in the form of a @code{declare} command that, if
+The expansion is a string in the form of
+an assignment statement or @code{declare} command that, if
 evaluated, will recreate @var{parameter} with its attributes and value.
 @item a
 The expansion is a string consisting of flag values representing
