@@ -130,6 +130,8 @@ extern struct user_info current_user;
 #  define USE_VAR(x)
 #endif
 
+#define HEREDOC_MAX 16
+
 /* Structure in which to save partial parsing state when doing things like
    PROMPT_COMMAND and bash_execute_unix_command execution. */
 
@@ -171,6 +173,8 @@ typedef struct _sh_parser_state_t {
   int echo_input_at_read;
   int need_here_doc;
 
+  /* structures affecting the parser */
+  REDIRECT *redir_stack[HEREDOC_MAX];
 } sh_parser_state_t;
 
 typedef struct _sh_input_line_state_t {
