@@ -501,3 +501,4 @@ unset
 ./array21.sub: line 20: typeset: A: not found
 declare -a a=()
 declare -A A=()
+declare -a foo=([0]="1" [1]="(4 5 6)" [2]="3")
