@@ -29,3 +29,9 @@ a=()
 typeset -p a
 A=()
 typeset -p A
+
+declare -a foo
+declare foo='(1 2 3)'
+declare foo[1]='(4 5 6)'
+
+declare -p foo
