@@ -227,6 +227,6 @@ argv[3] = <var="x^Ay^?z">
 declare -- var="x\001y\177z"$
 argv[1] = <$'x\001y\177z'>
 argv[1] = <x^Ay^?z>
-var=$'x\001y\177z'$
+var=$'x\001y\177z'
 argv[1] = <x^Ay^?z>
 declare -a array=([0]="x\001y\177z")$
