@@ -10,7 +10,7 @@ declare -p var | sed -n l
 
 recho ${var@Q}
 recho ${var@P}
-echo ${var@A} | sed -n l
+echo ${var@A}
 
 array=( "$var" )
 recho ${array[@]}
