@@ -56,3 +56,9 @@ $'\''
 $'\'abcd\''
 '
 1
+argv[1] = <^?>
+0000000  del  nl                                                        
+0000002
+0000000  esc  fs  gs  rs  us del  nl                                    
+0000007
+\q
