@@ -117,3 +117,4 @@ recho "$( args $'A\tB' )"
 
 ${THIS_SH} ./nquote1.sub
 ${THIS_SH} ./nquote2.sub
+${THIS_SH} ./nquote3.sub
