@@ -1,0 +1,6 @@
+recho $'\c?'
+
+echo $'\c?' |od -a
+echo $'\c[\c\\\c]\c^\c_\c?' |od -a
+
+echo $'\q'
