@@ -1,5 +1,5 @@
-This document details the changes between this version, bash-4.4-alpha, and
-the previous version, bash-4.3-release.
+This document details the changes between this version, bash-4.4-beta, and
+the previous version, bash-4.4-alpha.
 
 1.  Change to Bash
 
@@ -79,6 +79,11 @@ y.  Fixed a problem with the expansion of $'\c?'.
 
 z.  Bash no longer splits the expansion of here-strings, as the documentation
     has always said.
+
+aa. Bash now puts `s' in the value of $- if the shell is reading from standard
+    input.
+
+bb. Fixed a bug that caused the shell to crash if invoked with a NULL environment.
 
 2.  Changes to Readline
 
